--- a/scripts/server/index.html
+++ b/scripts/server/index.html
@@ -13,6 +13,15 @@
             width: 960px;
             margin: auto;
         }
+        a {
+            color: #ccc;
+        }
+        h2 {
+            margin-bottom: 4px;
+        }
+        main > div {
+            margin-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -21,9 +30,10 @@
             <h1>ITHARBORS UI EXAMPLE</h1>
         </header>
         <main name="core">
-
+            <h2>Core</h2>
         </main>
         <main name="graph">
+            <h2>Graph</h2>
             <div>
                 <a href="./graph" target="_blank">index</a>
             </div>
@@ -35,6 +45,7 @@
             </div>
         </main>
         <main name="tree">
+            <h2>Tree</h2>
             <div>
                 <a href="./tree" target="_blank">index</a>
             </div>
