[Optimize] 优化开发测试的 html 页面

--- a/scripts/server/index.html
+++ b/scripts/server/index.html
@@ -4,52 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ITHARBORS UI</title>
-    <style>
-        body {
-            color: #eee;
-            background: radial-gradient(circle at 70%, rgb(0,0,0), rgb(17,30,44), rgb(0,0,0));
-        }
-        section {
-            width: 960px;
-            margin: auto;
-        }
-        a {
-            color: #ccc;
-        }
-        h2 {
-            margin-bottom: 4px;
-        }
-        main > div {
-            margin-left: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./public/base.css">
+    <link rel="stylesheet" type="text/css" href="./public/index.css">
 </head>
 <body>
     <section>
         <header>
             <h1>ITHARBORS UI EXAMPLE</h1>
         </header>
-        <main name="core">
-            <h2>Core</h2>
-        </main>
-        <main name="graph">
-            <h2>Graph</h2>
-            <div>
-                <a href="./graph" target="_blank">index</a>
-            </div>
-            <div>
-                <a href="./graph/class.html" target="_blank">class</a>
-            </div>
-            <div>
-                <a href="./graph/flow.html" target="_blank">flow</a>
-            </div>
-        </main>
-        <main name="tree">
-            <h2>Tree</h2>
-            <div>
-                <a href="./tree" target="_blank">index</a>
-            </div>
-        </main>
+{{CONTENT}}
     </section>
 
 </body>
